--- a/Views/Home/Sobre.cshtml
+++ b/Views/Home/Sobre.cshtml
@@ -1,6 +1,266 @@
 ﻿@{
     ViewData["Title"] = "Sobre Nós";
 }
-<h1>@ViewData["Title"]</h1>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-<p>Esta página fala sobre nós...</p>
+<!-- Page About -->
+<!-- First Container -->
+
+<div class="container MarginCont1">
+
+    <div class="row">
+
+        <div class="col-lg">
+            <div class="AlignCont1Row1">
+                <h1>
+                    About us
+                    <span class="ColorTitleCont1">.</span>
+                </h1>
+                <p>
+                    "O trabalho no gerenciamento de projetos está presente nos <br /> mais diversos segmentos dos setores público e privado."
+                </p>
+
+                <p>
+                    "Independentemente da área de atuação, uma coisa é certa: <br />o gerente de projetos desempenha um papel estratégico <br />em qualquer negócio."
+                </p>
+
+                <a href="#" class="btn btn-warning">Get in touch</a>
+            </div>
+        </div>
+
+        <div class="col-lg">
+            <div>
+                <img src="~/Imagens/AboutPageContainer1.jpg" alt="ProjectManagement" class="imgCont1">
+            </div>
+        </div>
+
+    </div>
+
+</div>
+
+<!-- Second Container -->
+
+<div class="container MarginCont1">
+
+    <div class="row">
+
+        <div class="col-lg">
+            <div>
+                <video controls class="videoContainer2">
+
+                    <source src="~/Vídeos/AboutPageContainer2.mp4" type="video/mp4">
+
+                    Sorry, your browser doesn't support embedded videos.
+
+                </video>
+            </div>
+        </div>
+
+        <div class="col-lg">
+            <div class="AlignCont1Row1">
+                <h1>
+                    ProjectManagement
+                </h1>
+                <p>
+                    A empresa ProjectManagement é uma das pioneiros em gestão de projetos.<br /> Tudo começou em 2019, como uma empresa dedicada a formação na área da Informática.
+                </p>
+
+                <div>
+                    <ul>
+                        <li>Liberdade</li>
+                        <li>Igualdade</li>
+                        <li>Fraternidade</li>
+                    </ul>
+                </div>
+
+                <p>
+                    <a href="#" class="btn btn-warning"> See Elements</a>
+                    <a href="#" class="btn btn-outline-dark"> Learn More</a>
+                </p>
+
+            </div>
+        </div>
+
+    </div>
+
+</div>
+
+
+<!-- Third Container -->
+
+<div class="container AlignContainer3">
+    <p class="colorSubTitleContainer3">Why us?</p>
+    <h3>Manage your time to reduce your stress.</h3>
+</div>
+
+<!-- Fourth Container -->
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg">
+            <div>
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="~/Imagens/AboutPageContainer4_Img1.jpg" alt="Management" style="width:100%;">
+                        </div>
+
+                        <div class="item">
+                            <img src="~/Imagens/AboutPageContainer4_Img2.jpg" alt="Management" style="width:100%;">
+                        </div>
+
+                        <div class="item">
+                            <img src="~/Imagens/AboutPageContainer4_Img3.jpg" alt="Management" style="width:100%;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg">
+            <div>
+                <div class="panel-group" id="accordion">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Configurar projeto para contribuições úteis</a>
+                            </h4>
+                        </div>
+                        <div id="collapse1" class="panel-collapse collapse in">
+                            <div class="panel-body">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Mantendo sua segurança no ProjectManagement</a>
+                            </h4>
+                        </div>
+                        <div id="collapse2" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Usando modelos para incentivar problemas úteis e receber pull request</a>
+                            </h4>
+                        </div>
+                        <div id="collapse3" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">Documentar seu projeto com wikis</a>
+                            </h4>
+                        </div>
+                        <div id="collapse4" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<!-- Fifth Container -->
+
+<div class="container AlignContainer5">
+    <h3>Our Team</h3>
+    <p>Sorte é o que acontece quando a preparação encontra a oportunidade</p>
+</div>
+
+<!--Sixth Container-->
+
+<div class="container">
+    <div class="row MarginTopContainer6">
+        <div class="col-lg">
+
+            <div class="text-center">
+                <img class="card-img-top ImgsContainer6 rounded-circle border border-3 border-warning" src="~/Imagens/Fabio.jpg" alt="Card image">
+            </div>
+            <div class="card-body">
+                <h4 class="card-title text-center">Fábio Abreu</h4>
+                <h6 class="card-subtitle text-center">Eng. Informático</h6>
+                <p class="card-text text-center">Some example text some example text.</p>
+                
+                <button type="button" class="btn btn-outline-warning">See Profile</button>
+            </div>
+
+        </div>
+        <div class="col-lg">
+
+            <div class="text-center">
+                <img class="card-img-top ImgsContainer6 rounded-circle border border-3 border-warning" src="~/Imagens/Telmo.jpg" alt="Card image">
+            </div>
+            <div class="card-body">
+                <h4 class="card-title text-center">Telmo Morais</h4>
+                <h6 class="card-subtitle text-center">Eng. Informático</h6>
+                <p class="card-text text-center">Some example text some example text.</p>
+                
+                <button type="button" class="btn btn-outline-warning">See Profile</button>
+            </div>
+
+        </div>
+
+        <div class="col-lg">
+
+            <div class="text-center">
+                <img class="card-img-top ImgsContainer6 rounded-circle border border-3 border-warning" src="~/Imagens/Yuri.jpg" alt="Card image">
+            </div>
+            <div class="card-body">
+                <h4 class="card-title text-center">Leonardo Marques</h4>
+                <h6 class="card-subtitle text-center">Eng. Informático</h6>
+                <p class="card-text text-center">Some example text some example text.</p>
+                
+                <button type="button" class="btn btn-outline-warning">See Profile</button>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<!--Seventh Container-->
+<div class="container AlignContainer7 bg-warning">
+    <div class="PaddingContainer7">
+        <h2>Good people establishes trust</h2>
+        <p>Do you have a project in mind?</p>
+        <div>
+            <button type="button" class="btn btn-light btn-outline-warning"> LETS TALK</button>
+        </div>
+    </div>
+</div>
+
