--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,84 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+/*---------------------------------------------------------------------------------------------------------------------*/
+/*Page About*/
+/*---------------------------------------------------------------------------------------------------------------------*/
+
+/*First Container*/
+.MarginCont1 {
+    margin-top: 2%;
+}
+
+.AlignCont1Row1 {
+    padding-left: 2%;
+    padding-top: 17%;
+    padding-bottom: 7%;
+}
+
+.ColorTitleCont1 {
+    color: rgb(255,193,7);
+}
+
+.imgCont1 {
+    max-width: 100%;
+    height: auto;
+    text-align: center;
+}
+
+/*Second Container*/
+.videoContainer2 {
+    padding-top: 10%;
+    text-align: center;
+    max-width: 100%;
+    height: auto;
+}
+
+/*Third Container*/
+.AlignContainer3 {
+    margin-top: 4%;
+    margin-bottom: 4%;
+    text-align: center;
+}
+
+.colorSubTitleContainer3 {
+    color: rgb(255,193,7);
+}
+
+
+/*Fifth Container*/
+.AlignContainer5 {
+    margin-top: 4%;
+    margin-bottom: 4%;
+    text-align: center;
+}
+
+/*Sixth Container*/
+.ImgsContainer6 {
+    max-width: 50%;
+    height: auto;
+    
+}
+
+.MarginTopContainer6 {
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+/*Seventh Container*/
+.AlignContainer7 {
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+.PaddingContainer7 {
+    margin-top: 4%;
+    margin-bottom: 4%;
+    text-align: center;
+}
+
+/*---------------------------------------------------------------------------------------------------------------------*/
+
 
 .input-validation-error {
     border-color: red;
