Modificação da Pagina About

--- a/Views/Home/Sobre.cshtml
+++ b/Views/Home/Sobre.cshtml
@@ -1,266 +1,206 @@
 ﻿@{
-    ViewData["Title"] = "Sobre Nós";
+    ViewData["Title"] = "About";
 }
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-<!-- Page About -->
-<!-- First Container -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Road+Rage&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 
-<div class="container MarginCont1">
+<body>
+    <section>
+        <div class="container-fluid Cont1PageAbout">
 
-    <div class="row">
-
-        <div class="col-lg">
-            <div class="AlignCont1Row1">
-                <h1>
-                    About us
-                    <span class="ColorTitleCont1">.</span>
-                </h1>
-                <p>
-                    "O trabalho no gerenciamento de projetos está presente nos <br /> mais diversos segmentos dos setores público e privado."
-                </p>
-
-                <p>
-                    "Independentemente da área de atuação, uma coisa é certa: <br />o gerente de projetos desempenha um papel estratégico <br />em qualquer negócio."
-                </p>
-
-                <a href="#" class="btn btn-warning">Get in touch</a>
-            </div>
-        </div>
-
-        <div class="col-lg">
-            <div>
-                <img src="~/Imagens/AboutPageContainer1.jpg" alt="ProjectManagement" class="imgCont1">
-            </div>
-        </div>
-
-    </div>
-
-</div>
-
-<!-- Second Container -->
-
-<div class="container MarginCont1">
-
-    <div class="row">
-
-        <div class="col-lg">
-            <div>
-                <video controls class="videoContainer2">
-
-                    <source src="~/Vídeos/AboutPageContainer2.mp4" type="video/mp4">
-
-                    Sorry, your browser doesn't support embedded videos.
-
-                </video>
-            </div>
-        </div>
-
-        <div class="col-lg">
-            <div class="AlignCont1Row1">
-                <h1>
-                    ProjectManagement
-                </h1>
-                <p>
-                    A empresa ProjectManagement é uma das pioneiros em gestão de projetos.<br /> Tudo começou em 2019, como uma empresa dedicada a formação na área da Informática.
-                </p>
-
-                <div>
-                    <ul>
-                        <li>Liberdade</li>
-                        <li>Igualdade</li>
-                        <li>Fraternidade</li>
-                    </ul>
+            <div class="row MarginCont1PageAbout">
+                <div class="col-sm-1">
+                    <!--Space from left side-->
                 </div>
 
-                <p>
-                    <a href="#" class="btn btn-warning"> See Elements</a>
-                    <a href="#" class="btn btn-outline-dark"> Learn More</a>
-                </p>
+                <div class="col-sm-4">
+                    <h2 class="TitleCont1PageAbout">About us <span class="ColorTitleCont1PageAbout">.</span></h2>
+                    <p class="ParagraphCont1PageAbout">Manage your projects through ManageProjects, <strong> the safest and fastest manage tool</strong> on the market. </p>
+                    <div class="buttons">
+
+                        <a href="#" class="btn btn--color1">Join us</a>
+                        <a href="#" class="btn btn--color2">Contact us</a>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 pt-4">
+                    <div class="grid-container">
+                        <div class="grid-item GridCont1PageAbout"><a href="#" class="gradient-text">Product</a></div>
+                        <div class="grid-item GridCont1PageAbout"><a href="#security" class="gradient-text">Security</a></div>
+                        <div class="grid-item GridCont1PageAbout"><a href="#features" class="gradient-text">Features</a></div>
+                        <div class="grid-item GridCont1PageAbout"><a href="#pricing" class="gradient-text">Pricing</a></div>
+                        <div class="grid-item GridCont1PageAbout"><a href="#team" class="gradient-text">Team</a></div>
+                    </div>
+                </div>
+
+                <div class="col-sm-1">
+                    <!--Space from right side-->
+                </div>
 
             </div>
+
         </div>
 
-    </div>
-
-</div>
-
-
-<!-- Third Container -->
-
-<div class="container AlignContainer3">
-    <p class="colorSubTitleContainer3">Why us?</p>
-    <h3>Manage your time to reduce your stress.</h3>
-</div>
-
-<!-- Fourth Container -->
-
-<div class="container">
-    <div class="row">
-        <div class="col-lg">
+        <div class="container-fluid Cont2PageAbout pt-4">
             <div>
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                    </ol>
+                <h2 class="TitleCont2PageAbout">Good people establishes <strong class="ColorTitleCont1PageAbout">trust</strong></h2>
+                <p class="ParagraphCont2PageAbout">Do you have a project in mind?</p>
+                <div class="buttonCont2PageAbout">
+                    <a href="#" class="btn btn--color1">Lets talk</a>
+                </div>
+            </div>
 
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img src="~/Imagens/AboutPageContainer4_Img1.jpg" alt="Management" style="width:100%;">
+        </div>
+
+        <div class="container-fluid Cont3PageAbout pt-5">
+            <div>
+                <h2 class="TitleCont3PageAbout pb-5">Our Team</h2>
+
+                <div class="row">
+                    <div class="col-lg">
+
+                        <div class="text-center">
+                            <img class="rounded-circle OurTeam" src="~/Imagens/Fabio.jpg" alt="Our Team">
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Fábio Abreu</h3>
+                            <h5 class="card-subtitle text-center">Eng. Informático</h5>
                         </div>
 
-                        <div class="item">
-                            <img src="~/Imagens/AboutPageContainer4_Img2.jpg" alt="Management" style="width:100%;">
-                        </div>
+                    </div>
+                    <div class="col-lg">
 
-                        <div class="item">
-                            <img src="~/Imagens/AboutPageContainer4_Img3.jpg" alt="Management" style="width:100%;">
+                        <div class="text-center">
+                            <img class="rounded-circle OurTeam" src="~/Imagens/Telmo.jpg" alt="Our Team">
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Telmo Morais</h3>
+                            <h5 class="card-subtitle text-center">Eng. Informático</h5>
+                        </div>
+                    </div>
+
+                    <div class="col-lg">
+
+                        <div class="text-center">
+                            <img class="rounded-circle OurTeam" src="~/Imagens/Yuri.jpg" alt="Our Team">
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Leonardo Marques</h3>
+                            <h5 class="card-subtitle text-center">Eng. Informático</h5>
+
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
 
-        <div class="col-lg">
-            <div>
-                <div class="panel-group" id="accordion">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Configurar projeto para contribuições úteis</a>
-                            </h4>
-                        </div>
-                        <div id="collapse1" class="panel-collapse collapse in">
-                            <div class="panel-body">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </div>
-                        </div>
+
+        <div class="container-fluid Cont1PageAbout">
+            <div class="row MarginCont1PageAbout">
+                <div class="col-sm-1">
+                    <!--Space from left side-->
+                </div>
+
+                <div class="col-sm-4">
+                    <h2 class="TitleCont4PageAbout">Why us?</h2>
+                </div>
+
+                <div class="col-sm-6 pt-4">
+                    <div class="ParagraphCont4PageAbout">
+                        <p class="ParagraphCont5PageAbout">We believe that we have an extremely qualified team with an exceptional product.</p>
+                        <p class="ParagraphCont5PageAbout">Save more time for yourself through our app.</p>
                     </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Mantendo sua segurança no ProjectManagement</a>
-                            </h4>
-                        </div>
-                        <div id="collapse2" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Usando modelos para incentivar problemas úteis e receber pull request</a>
-                            </h4>
-                        </div>
-                        <div id="collapse3" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">Documentar seu projeto com wikis</a>
-                            </h4>
-                        </div>
-                        <div id="collapse4" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </div>
-                        </div>
-                    </div>
+                </div>
+
+                <div class="col-sm-1">
+                    <!--Space from right side-->
                 </div>
 
             </div>
         </div>
 
-    </div>
-</div>
 
-<!-- Fifth Container -->
 
-<div class="container AlignContainer5">
-    <h3>Our Team</h3>
-    <p>Sorte é o que acontece quando a preparação encontra a oportunidade</p>
-</div>
+        <div class="container-fluid Cont1PageAbout MarginCont5PageAbout">
 
-<!--Sixth Container-->
-
-<div class="container">
-    <div class="row MarginTopContainer6">
-        <div class="col-lg">
-
-            <div class="text-center">
-                <img class="card-img-top ImgsContainer6 rounded-circle border border-3 border-warning" src="~/Imagens/Fabio.jpg" alt="Card image">
+            <div class="row justify-content-start">
+                <div class="col-4">
+                    <!--Space from left side-->
+                </div>
+                <div class="col-4">
+                    <a id="security" class="TitleCont5PageAbout">Security</a>
+                    <h4>Trusted by millions of developers</h4>
+                    <p class="ParagraphCont5PageAbout">We protect and defend the most trustworthy platform for developers everywhere to create and build software.</p>
+                </div>
+                <div class="col-4">
+                    <!--Space from right side-->
+                </div>
             </div>
-            <div class="card-body">
-                <h4 class="card-title text-center">Fábio Abreu</h4>
-                <h6 class="card-subtitle text-center">Eng. Informático</h6>
-                <p class="card-text text-center">Some example text some example text.</p>
-                
-                <button type="button" class="btn btn-outline-warning">See Profile</button>
+
+            <div class="row justify-content-center MarginCont5PageAbout">
+                <div class="col-4">
+                    <!--Space from left side-->
+                </div>
+                <div class="col-4">
+                    <a id="features" class="TitleCont5PageAbout">Features</a>
+                    <h4>The tools you need to build what you want</h4>
+                    <p class="ParagraphCont5PageAbout">Make sure you see the changes you care about.</p>
+                </div>
+                <div class="col-4">
+                    <!--Space from right side-->
+                </div>
             </div>
+
+            <div class="row justify-content-center MarginCont5PageAbout">
+                <div class="col-4">
+                    <!--Space from left side-->
+                </div>
+                <div class="col-4">
+                    <a id="team" class="TitleCont5PageAbout">Team</a>
+                    <h4>Build like the best teams on the planet</h4>
+                    <p class="ParagraphCont5PageAbout">Manage everything in one place</p>
+                </div>
+                <div class="col-4">
+                    <!--Space from right side-->
+                </div>
+            </div>
+
+            <div class="row justify-content-end MarginCont5PageAbout">
+                <div class="col-8">
+                    <a id="pricing" class="TitleCont5PageAbout">Pricing</a>
+                    <div class="grid-container">
+                        <div class="grid-item">
+                            <h3 class="ColorPricingOptionsTitle">Free</h3><br />
+                            <p class="ParagraphCont5PageAbout">The basics for individuals<br />and organizations</p>
+                            <p class="ParagraphCont5PageAbout"> 0 € per user/month</p>
+                            <a href="#" class="btn btn--color1">Join for free</a>
+
+                        </div>
+                        <div class="grid-item">
+                            <h3 class="ColorPricingOptionsTitle">Team</h3><br />
+                            <p class="ParagraphCont5PageAbout">Advanced collaboration for<br /> individuals and organizations</p>
+                            <p class="ParagraphCont5PageAbout"> 4 € per user/month</p>
+                            <a href="#" class="btn btn--color3">Continue with Team</a>
+                        </div>
+                        <div class="grid-item">
+                            <h3 class="ColorPricingOptionsTitle">Enterprise</h3><br />
+                            <p class="ParagraphCont5PageAbout">Security, compliance,<br />and flexible deployment</p>
+                            <p class="ParagraphCont5PageAbout"> 21 € per user/month</p>
+                            <a href="#" class="btn btn--color1">Contact Sales</a>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+
 
         </div>
-        <div class="col-lg">
+                                 
 
-            <div class="text-center">
-                <img class="card-img-top ImgsContainer6 rounded-circle border border-3 border-warning" src="~/Imagens/Telmo.jpg" alt="Card image">
-            </div>
-            <div class="card-body">
-                <h4 class="card-title text-center">Telmo Morais</h4>
-                <h6 class="card-subtitle text-center">Eng. Informático</h6>
-                <p class="card-text text-center">Some example text some example text.</p>
-                
-                <button type="button" class="btn btn-outline-warning">See Profile</button>
-            </div>
-
-        </div>
-
-        <div class="col-lg">
-
-            <div class="text-center">
-                <img class="card-img-top ImgsContainer6 rounded-circle border border-3 border-warning" src="~/Imagens/Yuri.jpg" alt="Card image">
-            </div>
-            <div class="card-body">
-                <h4 class="card-title text-center">Leonardo Marques</h4>
-                <h6 class="card-subtitle text-center">Eng. Informático</h6>
-                <p class="card-text text-center">Some example text some example text.</p>
-                
-                <button type="button" class="btn btn-outline-warning">See Profile</button>
-            </div>
-        </div>
-    </div>
-
-</div>
-
-<!--Seventh Container-->
-<div class="container AlignContainer7 bg-warning">
-    <div class="PaddingContainer7">
-        <h2>Good people establishes trust</h2>
-        <p>Do you have a project in mind?</p>
-        <div>
-            <button type="button" class="btn btn-light btn-outline-warning"> LETS TALK</button>
-        </div>
-    </div>
-</div>
-
+    </section>
+</body>
