--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,41 +2,70 @@
     ViewData["Title"] = "Home Page";
 }
 
-<header class="bg-dark py-5">
-    <div class="container px-5">
-        <div class="row gx-5 align-items-center justify-content-center">
-            <div class="col-lg-8 col-xl-7 col-xxl-6">
-                <div class="my-5 text-center text-xl-start">
-                    <h1 class="display-5 fw-bolder text-white mb-2">Plataforma de Gestão de Projetos</h1>
-                    <p class="lead fw-normal text-white-50 mb-4">A plataforma de gestão de projetos que vai revolucionar a sua empresa</p>
-                    <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Começar</a>
-                    </div>
-                </div>
+
+
+<section class="PageHome">
+
+    <div class="container-fluid hero PaddingCont1PageHome">
+        <div class="row">
+            <div class="col-sm-1">
+
+
             </div>
+            <div class="col-sm-10">
+                <p>Welcome to our</p>
+                <h1 class="TitleCont1PageHome"> World's Creative<br>ManagementProject</h1>
+                <button class="button">Take a tour</button>
+
+
+            </div>
+            <div class="col-sm-1">
+
+
+            </div>
+
+        </div>
+
+        <div class="navs">
+
+            <img src="~/Imagens/SpaceMan1.png">
+            <img src="~/Imagens/nav.png">
+            <img src="~/Imagens/SpaceMan1.png">
+
+
+        </div>
+
+        <div class="spacemanfallings">
+            <img src="~/Imagens/SpaceMan3.png">
+            <img src="~/Imagens/SpaceMan3.png">
+
         </div>
     </div>
-</header>
-<!-- Features section-->
-<section class="py-5" id="features">
+
+
+</section>
+
+<section class="py-5 SecondSectionPageHome" id="features">
     <div class="container px-5 my-5">
         <div class="row gx-5">
-            <div class="col-lg-4 mb-5 mb-lg-0"><h1 class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h1></div>
+            <div class="col-lg-4 mb-5 mb-lg-0">
+                <img src="~/Imagens/nav.png" />
+            </div>
             <div class="col-lg-8">
                 <div class="row gx-5 row-cols-1 row-cols-md-2">
                     <div class="col mb-5 h-100">
-                        <h3>Coordene a sua equipa com facilidade</h3>
-                        <p class="mb-0">Tenha um cronograma eficiente e visualize todo o escopo de trabalho para garantir que as entregas aconteçam com fluidez e precisão.</p>
+                        <h3 class="AddColorLastContPageHome">Coordinate your team with ease</h3>
+                        <p class="mb-0">Have an efficient schedule and visualize the entire scope of work to ensure deliveries happen smoothly and accurately.</p>
                     </div>
                     <div class="col mb-5 h-100">
-                        <img src="~/Imagens/gestao-de-projeto-blog(1).png" />
+                        <img src="~/Imagens/SpaceMan3.png" width="300" />
                     </div>
                     <div class="col mb-5 mb-md-0 h-100">
-                        <img src="~/Imagens/ferramentas-gestao-de-projetos.jpg" />
+                        <img src="~/Imagens/SpaceMan1.png" width="300" />
                     </div>
                     <div class="col h-100">
-                        <h3>Automatize o fluxo de trabalho</h3>
-                        <p class="mb-0">Deixe sua equipa livre de tarefas repetitivas para que possam focar no que realmente importa, gerando impacto e inovação</p>
+                        <h3 class="AddColorLastContPageHome">Automate the workflow</h3>
+                        <p class="mb-0">Free your team from repetitive tasks so they can focus on what really matters, generating impact and innovation.</p>
                     </div>
                 </div>
             </div>
@@ -44,101 +73,15 @@
     </div>
 </section>
 <!-- Testimonial section-->
-<div class="py-5 bg-light">
+<div class="py-5 LastContPageHome">
     <div class="container px-5 my-5">
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-10 col-xl-7">
                 <div class="text-center">
-                    <div class="fs-4 mb-4 fst-italic">"Um projeto é um esforço temporário empreendido para criar um produto, serviço ou resultado exclusivo. Os projetos e as operações diferem, principalmente, no fato de que os projetos são temporários e exclusivos, enquanto as operações são contínuas e repetitivas."</div>
-                    <div class="d-flex align-items-center justify-content-center">
-                        <img class="rounded-circle me-3" src="~/Imagens/pmi.png" />
-                        <div class="fw-bold">
-                            PMI
-                            <span class="fw-bold text-primary mx-1">-</span>
-                            Project Management Institute
-                        </div>
-                    </div>
+                    <div class="fs-4 mb-4 fst-italic">A great management tool, developed to adapt to different needs.<br> We work every day to <strong class="AddColorLastContPageHome">make your life easy and happy.</strong></div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!-- Blog preview section
-<section class="py-5">
-    <div class="container px-5 my-5">
-        <div class="row gx-5 justify-content-center">
-            <div class="col-lg-8 col-xl-6">
-                <div class="text-center">
-                    <h2 class="fw-bolder">From our blog</h2>
-                    <p class="lead fw-normal text-muted mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque fugit ratione dicta mollitia. Officiis ad.</p>
-                </div>
-            </div>
-        </div>
-        <div class="row gx-5">
-            <div class="col-lg-4 mb-5">
-                <div class="card h-100 shadow border-0">
-                    <img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="..." />
-                    <div class="card-body p-4">
-                        <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
-                        <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Blog post title</h5></a>
-                        <p class="card-text mb-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                    <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
-                        <div class="d-flex align-items-end justify-content-between">
-                            <div class="d-flex align-items-center">
-                                <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
-                                <div class="small">
-                                    <div class="fw-bold">Kelly Rowan</div>
-                                    <div class="text-muted">March 12, 2021 &middot; 6 min read</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 mb-5">
-                <div class="card h-100 shadow border-0">
-                    <img class="card-img-top" src="https://dummyimage.com/600x350/adb5bd/495057" alt="..." />
-                    <div class="card-body p-4">
-                        <div class="badge bg-primary bg-gradient rounded-pill mb-2">Media</div>
-                        <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Another blog post title</h5></a>
-                        <p class="card-text mb-0">This text is a bit longer to illustrate the adaptive height of each card. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                    <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
-                        <div class="d-flex align-items-end justify-content-between">
-                            <div class="d-flex align-items-center">
-                                <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
-                                <div class="small">
-                                    <div class="fw-bold">Josiah Barclay</div>
-                                    <div class="text-muted">March 23, 2021 &middot; 4 min read</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 mb-5">
-                <div class="card h-100 shadow border-0">
-                    <img class="card-img-top" src="https://dummyimage.com/600x350/6c757d/343a40" alt="..." />
-                    <div class="card-body p-4">
-                        <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
-                        <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">The last blog post title is a little bit longer than the others</h5></a>
-                        <p class="card-text mb-0">Some more quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                    <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
-                        <div class="d-flex align-items-end justify-content-between">
-                            <div class="d-flex align-items-center">
-                                <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
-                                <div class="small">
-                                    <div class="fw-bold">Evelyn Martinez</div>
-                                    <div class="text-muted">April 2, 2021 &middot; 10 min read</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
--->
+
