--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
                     <h1 class="display-5 fw-bolder text-white mb-2">Plataforma de Gestão de Projetos</h1>
                     <p class="lead fw-normal text-white-50 mb-4">A plataforma de gestão de projetos que vai revolucionar a sua empresa</p>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Começar</a>
+                        <a class="btn btn-primary btn-lg px-4 me-sm-3" asp-area="" asp-controller="NovoColaborador" asp-action="Index">Começar</a>
                     </div>
                 </div>
             </div>
