--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -85,3 +85,29 @@
     </div>
 </div>
 
+<section>
+    <div class="container-fluid Cont1PageAbout">
+
+        <div class="row MarginCont1PageAbout">
+            <div class="col-sm-1">
+                <!--Space from left side-->
+            </div>
+            <div class="col-sm-10 pt-4">
+                <div class="grid-container">
+                    <div class="grid-item GridCont1PageAbout"><a href="#" class="gradient-text">Projetos</a></div>
+                    <div class="grid-item GridCont1PageAbout"><a class="gradient-text"  asp-area="" asp-controller="NovoColaborador" asp-action="Index">Colaboradores</a></div>
+                    <div class="grid-item GridCont1PageAbout"><a href="#features" class="gradient-text">Features</a></div>
+                    <div class="grid-item GridCont1PageAbout"><a href="#pricing" class="gradient-text">Pricing</a></div>
+                    <div class="grid-item GridCont1PageAbout"><a href="#team" class="gradient-text">Team</a></div>
+                </div>
+            </div>
+            <div class="col-sm-1">
+                <!--Space from right side-->
+            </div>
+
+        </div>
+
+    </div>
+
+</section>
+
