--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
 
     <main class="flex-shrink-0">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="index.html">Projeto Gestão</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Projeto Gestão</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -63,5 +63,28 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+
+
+    <script>
+
+        $(window).scroll(function () {
+            if ($(window).scrollTop()) {
+                $("nav").addClass("black");
+            }
+            else {
+                $("nav").removeClass("black");
+            }
+        });
+
+
+    </script>
+
+    @*<script type="text/javascript">window.addEventListener("scroll", function () {
+            var main = document.querySelector("main");
+            main.classList.toggle("sticky", window.scrollY > 0);
+        }
+    </script>*@
+
 </body>
 </html>
