--- a/Views/NovoProjeto/Index.cshtml
+++ b/Views/NovoProjeto/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProjetoGestao.Models.NovoProjeto>
+﻿@model IEnumerable<ProjetoGestao.Models.Projeto>
 
 @{
     ViewData["Title"] = "Index";
