--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             <div class="col-sm-10">
                 <p>Welcome to our</p>
                 <h1 class="TitleCont1PageHome"> World's Creative<br>ManagementProject</h1>
-                <button class="button">Take a tour</button>
+                <a class="button text-decoration-none"asp-area="" asp-controller="Projetoes" asp-action="Index">Aceder aos projetos</a>
 
 
             </div>
@@ -94,9 +94,9 @@
             <div class="col-sm-10 pt-4">
                 <div class="grid-container">
                     <div class="grid-item GridCont1PageAbout"><a href="#" class="gradient-text">Projetos</a></div>
-                    <div class="grid-item GridCont1PageAbout"><a class="gradient-text"  asp-area="" asp-controller="NovoColaborador" asp-action="Index">Colaboradores</a></div>
-                    <div class="grid-item GridCont1PageAbout"><a href="#features" class="gradient-text">Features</a></div>
-                    <div class="grid-item GridCont1PageAbout"><a href="#pricing" class="gradient-text">Pricing</a></div>
+                    <div class="grid-item GridCont1PageAbout"><a class="gradient-text"  asp-area="" asp-controller="Colaboradors" asp-action="Index">Colaboradores</a></div>
+                    <div class="grid-item GridCont1PageAbout"><a class="gradient-text" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a></div>
+                    <div class="grid-item GridCont1PageAbout"><a class="gradient-text" asp-area="" asp-controller="Gestors" asp-action="Index">Gestores</a></div>
                     <div class="grid-item GridCont1PageAbout"><a href="#team" class="gradient-text">Team</a></div>
                 </div>
             </div>
