Opção de criar a funcionar

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -97,7 +97,8 @@
                     <div class="grid-item GridCont1PageAbout"><a class="gradient-text"  asp-area="" asp-controller="Colaboradors" asp-action="Index">Colaboradores</a></div>
                     <div class="grid-item GridCont1PageAbout"><a class="gradient-text" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a></div>
                     <div class="grid-item GridCont1PageAbout"><a class="gradient-text" asp-area="" asp-controller="Gestors" asp-action="Index">Gestores</a></div>
-                    <div class="grid-item GridCont1PageAbout"><a href="#team" class="gradient-text">Team</a></div>
+                    <div class="grid-item GridCont1PageAbout"><a class="gradient-text" asp-area="" asp-controller="Funcaos" asp-action="Index">Função</a></div>
+                    <div class="grid-item GridCont1PageAbout"><a href="#team" class="gradient-text">Equipa</a></div>
                 </div>
             </div>
             <div class="col-sm-1">
