--- a/Views/Colaboradors/Create.cshtml
+++ b/Views/Colaboradors/Create.cshtml
@@ -50,6 +50,9 @@
             <div class="form-group">
                 <label asp-for="FuncaoId" class="control-label"></label>
                 <select asp-for="FuncaoId" class ="form-control" asp-items="ViewBag.FuncaoId"></select>
+                <div>
+                    <button asp-area="" asp-controller="Funcaos" asp-action="Create" class="btn-secondary">Criar Função</button>
+                </div>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -59,8 +62,10 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-outline-secondary" >Back to List</a>
 </div>
+
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
