Mensagem de sucesso colaborador criado alterada

--- a/Views/Colaboradors/Sucesso.cshtml
+++ b/Views/Colaboradors/Sucesso.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = "Sucesso";
 }
 
-<h1>Sucesso!</h1>
-<p>Colaborador Criado com sucesso</p>
+<h1 class="text-success">@ViewBag.Title</h1>
+<p class="lead">@ViewBag.Message</p>
 <a class="btn btn-primary" asp-action="Index">Ver Colabroradores</a>
 
 
